tests/ui/compile-fail/pin_data/missing_comma.stderr
error: expected `,`, or `}`, found `b`
 --> tests/ui/compile-fail/pin_data/missing_comma.rs:5:16
  |
5 |     a: Box<Foo>
  |                ^ help: try adding a comma: `,`

error: recursion limit reached while expanding `$crate::__pin_data!`
 --> tests/ui/compile-fail/pin_data/missing_comma.rs:3:1
  |
3 | #[pin_data]
  | ^^^^^^^^^^^
  |
  = help: consider increasing the recursion limit by adding a `#![recursion_limit = "256"]` attribute to your crate (`$CRATE`)
  = note: this error originates in the macro `$crate::__pin_data` which comes from the expansion of the attribute macro `pin_data` (in Nightly builds, run with -Z macro-backtrace for more info)
